fix margin on mobile

--- a/public/css/flex_md.css
+++ b/public/css/flex_md.css
@@ -359,7 +359,7 @@
   }
 
   .data_vet {
-    margin-top: 34px;
+    margin-top: 27px;
   }
 
     .data > div {
